--- a/02按钮&&表单/表单文本对齐/demo.html
+++ b/02按钮&&表单/表单文本对齐/demo.html
@@ -10,11 +10,20 @@
             /*text-align: justify;*/
             /*用于不用的区别*/
         }
+         .demo2{
+            width: 70px;
+            text-align: justify;
+            /*用于不用的区别*/
+        }
     </style>
 </head>
 <body>
 <div class="demo">
-	使用justify与不使用justify
+	用于不用的区别 (不使用justify)
+</div>
+<br/>
+<div class="demo2">
+    用于不用的区别 (使用justify)
 </div>
 
 <!-- <div class="demo">
